kustomization/overlays/experimental/kubevirt/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: kubevirt-ingress
spec:
  rules:
    - host: cdi-image-upload.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
            path: /
            pathType: Prefix
